Fix: position on mobile for arma tu composicion

--- a/wp-content/themes/papel-ilustrado/scss/custom/_page-composiciones.scss
+++ b/wp-content/themes/papel-ilustrado/scss/custom/_page-composiciones.scss
@@ -157,10 +157,10 @@
 
       // Responsive
       @include mq($from: mobile, $until: tablet) {
-         $width: 300px;
+         $width: 295px;
          height: 460px;
          height: calc(0.67 * #{$width});
-         max-width: $width;
+         width: $width;
          &__slider {
             position: relative;
             padding-bottom: 100px;
@@ -258,6 +258,50 @@
          &::before {
             filter: grayscale(0);
          }
+      }
+   }
+}
+
+#composition-component {
+   display: flex;
+   flex-direction: column;
+   & > .build-compostion__title {
+      order: 1;
+   }
+   & > .slider-nav {
+      order: 2;
+   }
+   & > .build-composition__modal {
+      order: 3;
+   }
+   & > .btn-principal {
+      order: 4;
+   }
+   & > .mobile {
+      order: 3;
+   }
+   @include mq($from: mobile, $until: tablet) {
+      padding: 0;
+      & > .build-compostion__title {
+         order: 1;
+         margin: 10px 0;
+         max-width: unset;
+         width: 100%;
+         & > .container {
+            padding: 0;
+         }
+      }
+      & > .slider-nav {
+         order: 3;
+      }
+      & > .build-composition__modal {
+         order: 2;
+      }
+      & > .btn-principal {
+         order: 4;
+      }
+      & > .mobile {
+         order: 3;
       }
    }
 }
